# The-Wizards-Familiar

./: LICENSE  MANIFEST.in  README.md  TextMysteryGame.py  cli.py  game_test_shared.py  input.py  letter.txt  lexicon.py  main.py  mapper.py  recipe.txt  requirements.txt  room_guide_example.py  setup.cfg  setup.py  spell.txt  timer_test.py  title.txt  tkinter_gui.py  todo.txt
__pycache__/: TextMysteryGame.cpython-39.pyc.139974635581744
src/: __main__.py  mapper.py  tkinter_gui.py  wizards_familiar.py
src/data/: help.txt  letter.txt  license.txt  opening_scene.txt  spell.txt
wizards_familiar/: .gitignore  setup.py  todo.txt
wizards_familiar/src/: __main__.py  mapper.py  tkinter_gui.py  wizards_familiar.py
wizards_familiar/src/wizards_familiar/: main.py  main.spec  mapper.py  tkinter_gui.py  wizards_familiar.py
wizards_familiar/src/wizards_familiar/data/: help.txt
