[metadata]
name = The Wizards Familiar
version = 1.0.0
author = Evan Hale
author_email = efhale@gmail.com 
description = A Text Puzzle/Exploration Game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Cancid/The-Wizards-Familiar
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Topic :: Games/Entertainment :: Puzzle Games

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src